@@ -33,5 +33,7 @@ symbian {
 
     include($$QT_SOURCE_TREE/demos/symbianpkgrules.pri)
 
+	LIBS += -lCommDb
+
     TARGET.CAPABILITY="NetworkServices"
 }
