@@ -126,6 +126,13 @@ Qt for Mac OS X
 
  -
 
+Qt for Symbian
+--------------
+
+ - Phonon MMF backend
+   * [QTBUG-11436] Added a MediaObject property which allows the client to
+     specify which Internet Access Point should be used for streaming.
+
 Qt for Embedded Linux
 ---------------------
 
